# solnet-orchestrator-architektur

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/decision-records/: 001-hybrid-orchestration-model.md  002-sandboxing-strategy.md  003-wireguard-integration.md
docs/diagrams/: layered-architecture.mmd
docs/plans/: wireguard-phase-a-implementation.md
src/: lib.rs  main.rs
src/api/: server.rs
src/core/: mod.rs  node_manager.rs  scheduler.rs
src/event_bus/: mod.rs
src/mesh/: yggdrasil.rs
src/wireguard/: keys.rs  mod.rs  types.rs
